[package]
name = "Aether-Chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
aether_lib = { git = "https://github.com/Prototype-Aether/Aether-Lib.git", branch="log-refactor" }
simple_logger = "2.1.0"
crossbeam = "0.8"
log = "0.4"
